bugs on base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
 									<i class="zmdi zmdi-male-alt zmdi-hc-fw"></i>
 									&nbsp;&nbsp; Solicitante
 								</a>
-								<a href="">
+								<a href="{% url 'solicitudes:list' %}">
 									<i class="zmdi zmdi-home zmdi-hc-fw"></i>
 									&nbsp;&nbsp; Solicitudes
 								</a>
